--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "beconnect",
-  "version": "1.0.0",
-  "description": "An application for connecting businesses and customers.",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/enJames/BEConnect.git"
-  },
-  "author": "Enejo James Oche",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/enJames/BEConnect/issues"
-  },
-  "homepage": "https://github.com/enJames/BEConnect#readme"
+    "name": "beconnect",
+    "version": "1.0.0",
+    "description": "An application for connecting businesses and customers.",
+    "main": "server/app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/enJames/BEConnect.git"
+    },
+    "author": "Enejo James Oche",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/enJames/BEConnect/issues"
+    },
+    "homepage": "https://github.com/enJames/BEConnect#readme",
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "chai": "^4.1.2",
+        "chai-http": "^4.0.0",
+        "express": "^4.16.3"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "eslint": "^4.19.1",
+        "istanbul": "^0.4.5",
+        "mocha": "^5.1.0",
+        "nyc": "^11.6.0"
+    }
 }
