--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
         "babel-preset-env": "^1.6.1",
         "babel-preset-stage-2": "^6.24.1",
         "eslint": "^4.19.1",
+        "eslint-config-airbnb": "^16.1.0",
+        "eslint-plugin-import": "^2.11.0",
+        "eslint-plugin-jsx-a11y": "^6.0.3",
+        "eslint-plugin-react": "^7.7.0",
         "istanbul": "^0.4.5",
         "mocha": "^5.1.0",
         "nyc": "^11.6.0"
