--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "An application for connecting businesses and customers.",
     "main": "server/app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "nyc mocha server/test --exit --compilers js:babel-core/register",
+        "start": "babel-node server/app.js",
+        "coverage": "nyc report --reporter=text-lcov | coveralls"
     },
     "repository": {
         "type": "git",
@@ -20,7 +22,8 @@
         "body-parser": "^1.18.2",
         "chai": "^4.1.2",
         "chai-http": "^4.0.0",
-        "express": "^4.16.3"
+        "express": "^4.16.3",
+        "morgan": "^1.9.0"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
@@ -34,7 +37,6 @@
         "eslint-plugin-react": "^7.7.0",
         "istanbul": "^0.4.5",
         "mocha": "^5.1.0",
-        "morgan": "^1.9.0",
         "nyc": "^11.6.0"
     }
 }
