--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "An application for connecting businesses and customers.",
     "main": "server/app.js",
     "scripts": {
-        "test": "nyc mocha server/test --exit --compilers js:babel-core/register",
+        "test": "nyc mocha server/test --exit --require babel-core/register",
         "start": "babel-node server/app.js",
         "coverage": "nyc report --reporter=text-lcov | coveralls"
     },
