--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "chai": "^4.1.2",
         "chai-http": "^4.0.0",
         "express": "^4.16.3",
-        "morgan": "^1.9.0"
+        "morgan": "^1.9.0",
+        "swagger-ui-express": "^3.0.8"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
