--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "chai-http": "^4.0.0",
         "express": "^4.16.3",
         "morgan": "^1.9.0",
-        "swagger-ui-express": "^3.0.8"
+        "swagger-tools": "^0.10.3",
+        "swagger-ui": "^3.13.4",
+        "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
