--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "body-parser": "^1.18.2",
         "chai": "^4.1.2",
         "chai-http": "^4.0.0",
+        "dotenv": "^5.0.1",
         "express": "^4.16.3",
         "morgan": "^1.9.0",
         "pg": "^7.4.1",
