--- a/.env
+++ b/.env
@@ -1,8 +1,2 @@
 secretKey=your_secret_key
-DB_NAME=databasename
-DB_USERNAME=databaseusername
-DB_PASSWORD=databasepassword
-DBNAME=databasename_test
-DB_PORT=database_port
-DB_HOST=database_host
-DB_DIALECT=postgres
+DATABASE_URL='postgres://king:pass@localhost:5432/beconnect'
