--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-secretKey=your_secret_key
-DATABASE_URL='postgres://king:pass@localhost:5432/beconnect'
+DB_NAME=databasename
+DB_USERNAME=databaseusername
+DB_PASSWORD=databasepassword
+DBNAME=databasename_test
+DB_PORT=database_port
+DB_HOST=database_host
+DB_DIALECT=postgres
