--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ install:
 script:
   - npm test
   - npm run coverage
+services:
+- postgresql
 env:
-  - NODE_ENV=test
+- NODE_ENV=test DB_USERNAME=enjames DB_PASSWORD=password DBNAME=beconnect_test
+before_script:
+- psql -c 'create database weconnect_test;' -U postgres
+- psql -c "CREATE USER enjames WITH PASSWORD 'password';" -U postgres
 cache:
   directories:
     - "node_modules"
