Modify database setup

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-DB_NAME=databasename
-DB_USERNAME=databaseusername
-DB_PASSWORD=databasepassword
-DBNAME=databasename_test
+DB_NAME=beconnect
+DB_USERNAME=enjames
+DB_PASSWORD=password
 DB_PORT=database_port
 DB_HOST=database_host
 DB_DIALECT=postgres
