--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ script:
 services:
 - postgresql
 env:
-- NODE_ENV=test DB_USERNAME=enjames DB_PASSWORD=password DBNAME=beconnect_test
+- NODE_ENV=test DB_USERNAME=enjames DB_PASSWORD=password DBNAME=beconnect
 before_script:
-- psql -c 'create database weconnect_test;' -U postgres
+- psql -c 'create database beconnect;' -U postgres
 - psql -c "CREATE USER enjames WITH PASSWORD 'password';" -U postgres
 cache:
   directories:
