--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ script:
 services:
 - postgresql
 env:
-- NODE_ENV=test DB_USERNAME=enjames DB_PASSWORD=password DBNAME=beconnect
+- NODE_ENV=test DB_USERNAME=enjames DB_PASSWORD=password DB_NAME=beconnect
 before_script:
 - psql -c 'create database beconnect;' -U postgres
 - psql -c "CREATE USER enjames WITH PASSWORD 'password';" -U postgres
+- sequelize db:migrate
 cache:
   directories:
     - "node_modules"
