--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_NAME=beconnect
 DB_USERNAME=enjames
 DB_PASSWORD=password
-DB_PORT=database_port
-DB_HOST=database_host
+DB_PORT=5432
+DB_HOST=127.0.0.1
 DB_DIALECT=postgres
