--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
 - "stable"
 install:
   - npm install
+  - npm install -g sequelize-cli
 script:
   - npm test
   - npm run coverage
@@ -13,6 +14,7 @@ env:
 before_script:
 - psql -c 'create database beconnect;' -U postgres
 - psql -c "CREATE USER enjames WITH PASSWORD 'password';" -U postgres
+- sequelize db:migrate
 cache:
   directories:
     - "node_modules"
