--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 before_script:
 - psql -c 'create database beconnect;' -U postgres
 - psql -c "CREATE USER enjames WITH PASSWORD 'password';" -U postgres
-- sequelize db:migrate
+- sequelize db:migrate --url 'postgres://enjames:password@localhost:5432/beconnect'
 cache:
   directories:
     - "node_modules"
